io-hotmoka-examples/src/main/java/io/hotmoka/examples/errors/illegaltypeforstoragefield1/NonStorage.java
package io.hotmoka.examples.errors.illegaltypeforstoragefield1;

public class NonStorage {
}